# COMP3888_Capstone_Project

./: Group_Contract_Week_2_5-2-1.doc  P35.docx  README.md
Document/: Group_Contract_Week_2_5-2-1.doc
MeetingLog/: week2.md  week3.md
animal_action/: .gitignore  ActionsEstLoader.py  export_tb_pngs.py  (+3 more)
cow-detectection/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_inference.sh
cow-detectection/cow_detectection/: __init__.py  dataset.py  features.py  plots.py
cow-detectection/cow_detectection/modeling/: README.md  base.py  pipeline_test_all.py  predict.py  train.py
cow-detectection/cow_detectection/modeling/hrnet/: README.md  hrnet_inference.py  pose_inference.py
cow-detectection/cow_detectection/modeling/stgcn/: README.md  __init__.py  inference.py  model.py  predict.py  preprocessor.py  train.py  trainer.py  utils.py  validator.py
cow-detectection/cow_detectection/modeling/vitpose/: dataset_cattle.py  debug.py  inference.py  model_vitpose.py  train.py  utils.py
cow-detectection/cow_detectection/modeling/vitpose/results/: keypoints.pkl
cow-detectection/cow_detectection/modeling/vitpose/training_set/: _annotations_test.coco.json
cow-detectection/cow_detectection/modeling/yolov8/: README.md  plots.py  predict.py  train.py  yolov8_inference.py  yolov8_test.py
cow-detectection/cow_detectection/testing/: hrnet_test.py  performance_test.py  stgcn_test.py  yolov8_test.py
cow-detectection/cow_detectection/testing/bench/: perf_results.csv  perf_summary.csv
cow-detectection/docs/: mkdocs.yml
cow-detectection/docs/docs/: index.md
(+61 files in other folders)
